--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -1,6 +1,6 @@
 /* ---- HEADER ---- */
 header {
-    background: url('/top.jpg') no-repeat center center/cover;
+    background: rgba(130, 118, 118, 0.5) no-repeat center center/cover;
     color: white;
     padding: 20px 0;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
@@ -77,7 +77,7 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    background: url('/lila.avif') no-repeat center center fixed;
+    background: url('/bn.jpg') no-repeat center center fixed;
     background-size: cover;
     color: #fff;
     text-align: center;
@@ -92,7 +92,7 @@ section {
     padding: 80px 20px;
     margin: 20px auto;
     max-width: 900px;
-    background: rgba(255, 255, 255, 0.2); 
+    background: rgba(85, 94, 198, 0.5); 
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.3);
     transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
@@ -110,7 +110,7 @@ section h2 {
     font-size: 2.5em;
     text-transform: uppercase;
     margin-top: 30px;
-    background: linear-gradient(135deg, #ff8c00, #ff2e63);
+    background: linear-gradient(135deg, #f5f8f5, #e1e0dd);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -124,8 +124,8 @@ section h2 a {
 }
 
 section h2 a:hover {
-    color: #ffde59;
-    text-shadow: 3px 3px 15px rgba(255, 222, 89, 0.8);
+    color: #fbfbf9;
+    text-shadow: 3px 3px 15px rgba(213, 212, 209, 0.8);
 }
 
 /* ---- TARJETAS DE COMPÉTENCES ---- */
@@ -255,7 +255,7 @@ footer {
 
 .projet-item a {
     display: inline-block;
-    color: #ff8c00;
+    color: #ded7ce;
     font-weight: bold;
     font-size: 1.2em;
     transition: color 0.3s ease-in-out;
@@ -281,7 +281,7 @@ img {
     grid-template-columns: repeat(2, 1fr); /* Dos columnas */
     gap: 30px;
     padding: 50px 20px;
-    background-color: rgba(255, 255, 255, 0.2); /* Fondo transparente con un toque de color */
+    background: rgba(85, 94, 198, 0.5); 
     border-radius: 10px;
 }
 
@@ -310,7 +310,7 @@ img {
 }
 
 .contact-item a {
-    color: #ff2e63;
+    color: #f8f8f8;
     text-decoration: none;
     font-weight: bold;
     font-size: 1.1em;
